--- a/css/main.css
+++ b/css/main.css
@@ -307,8 +307,8 @@ header .intro-text .intro-heading {
   font-family: 'DINPro-Bold', 'Helvetica', 'sans-serif' ;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 50px;
-  line-height: 50px;
+  font-size: 4.5em;
+  line-height: 1em;
   margin-bottom: 15px;
 }
 @media (min-width: 768px) {
@@ -327,8 +327,8 @@ header .intro-text .intro-heading {
     font-family: 'DINPro-Bold', 'Helvetica', 'sans-serif' ;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 75px;
-    line-height: 75px;
+    font-size: 8em;
+    line-height: 1em;
     margin-bottom: 15px;
   }
 }
