--- a/css/main.css
+++ b/css/main.css
@@ -653,7 +653,8 @@ aside.clients img {
   margin: 50px auto;
 }
 section#contact {
-  background-color: #b6a1c4;
+  background-color: #00E6E6;
+
   /*background-image: url('../img/map-image.png');*/
   background-position: center;
   background-repeat: no-repeat;
@@ -704,8 +705,10 @@ section#contact .text-danger {
   color: #e74c3c;
 }
 footer {
-  padding: 25px 0;
+  padding: 50px 0;
   text-align: center;
+  background-color: black;
+  color:white;
 }
 footer span.copyright {
   line-height: 40px;
