--- a/css/main.css
+++ b/css/main.css
@@ -476,10 +476,16 @@ section h3.section-subheading {
   bottom: 0;
   position: absolute;
   content: "";
-  width: 2px;
-  background-color: #f1f1f1;
+  width: 5px;
   left: 40px;
   margin-left: -1.5px;
+
+  /* gradient background on timeline */
+  background: #00ffff; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#00ffff, #ff7bac); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#00ffff, #ff7bac); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#00ffff, #ff7bac); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#00ffff, #ff7bac); /* Standard syntax (must be last) */
 }
 .timeline > li {
   margin-bottom: 50px;
@@ -523,7 +529,7 @@ section h3.section-subheading {
   background-color: #ff7bac;
   color: white;
   border-radius: 100%;
-  border: 7px solid #00ffff;
+  border: 5px solid #464343;
   text-align: center;
 }
 .timeline > li .timeline-image h4 {
