--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,7 @@ fieldset[disabled] .btn-primary.active {
   border-radius: 3px;
   font-size: 18px;
   padding: 20px 40px;
-  margin:3px 5px;
+  margin:5px 5px;
 }
 .btn-xl:hover,
 .btn-xl:focus,
@@ -205,7 +205,12 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: purple;
+  background-color: #B333B3;
+
+  /*eases button hover transtion */
+  transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
   border-color: none;
 }
 .btn-xl:active,
@@ -470,13 +475,14 @@ section h3.section-subheading {
 }
 .timeline-text{
   font-size: 18px;
+  color: #464343;
 }
 .timeline:before {
   top: 0;
   bottom: 0;
   position: absolute;
   content: "";
-  width: 5px;
+  width: 4px;
   left: 40px;
   margin-left: -1.5px;
 
@@ -529,7 +535,7 @@ section h3.section-subheading {
   background-color: #ff7bac;
   color: white;
   border-radius: 100%;
-  border: 5px solid #464343;
+  border: 4px solid gray;
   text-align: center;
 }
 .timeline > li .timeline-image h4 {
@@ -660,8 +666,6 @@ aside.clients img {
 }
 section#contact {
   background-color: #00E6E6;
-
-  /*background-image: url('../img/map-image.png');*/
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -879,20 +883,28 @@ body {
     background: #ff7bac; color: black;
 }
 
-.panel-default > .panel-heading-lavender {
-    background: #b6a1c4; color: black;
-}
 
 /* changes panel heading hover colors */
 .panel-heading:hover{
-  opacity:0.85
+  background:#DCDCDC;
+  transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
 }
+
 .panel-heading-pink:hover {
-  opacity:0.85
+  background: #FFAEDF;
+  transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
 }
 
 .panel-heading-blue:hover {
-  opacity:0.7
+  background: #99FFFF;
+  transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+
 }
 
 .panel-default > .panel-heading-gray {
