--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #ff7bac;
+  background-color: #00ffff;
   border-color: none;
 }
 .btn-xl:active,
